# ai-news-agent

./: .dockerignore  .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/agent/: api.py  delivery.py  formater.py  graph.py  llm.py  orchestrator.py  reader.py  scraper.py  state.py  validator.py  verifier.py
src/agent/persistence/: run_logger.py  subscriber_store.py
src/static/: app.jsx  index.html
